[metadata]
name = ischedule
version = 1.2.1
author = Aleksander Veksler
author_email = aleksve@gmail.com
description = Single-thread interval scheduler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aleksve/ischedule
project_urls =
    Bug Tracker = https://github.com/aleksve/ischedule/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
